[project]
name = "gaps"
version = "0.1.0"
description = "Graph-based Automated Path Synthesizer"
authors = [
    {name = "samudoria",email = "samueledoria@gmail.com"}
]
readme = "README.md"
requires-python=">=3.11"

[tool.poetry.dependencies]
python = "^3.11"
frida-tools = "^12.4.4"
networkx = "^2.8.8"
androidviewclient = "^23.4.0"
click = "^8.1.7"
androguard = "^4.1.3"
black = "^24.4.2"
mypy = "^1.10.1"
pydantic = "^2.8.2"
frida = "^16.5.1"
loguru = "^0.7.3"
openai = "0.27.2"
tenacity = "8.2.3"
uiautomator2 = "2.16.25"
pyinstrument = "^5.0.2"

[tool.poetry.scripts]
gaps = "gaps.cli:cli"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
